--- a/src/main/resources/templates/answers.html
+++ b/src/main/resources/templates/answers.html
@@ -10,30 +10,30 @@
 			<a th:text="Home" href="home" th:href="@{/home}"></a> -> <a th:text="Quests" href="quest/add" th:href="@{/quest/add}"></a> -> <a th:text="${quest.name}"
 				th:href="@{/quest/{id}/questions(id=${quest.id})}"></a> -> <span th:text="${question.value}"></span>
 		</h4>
-
-		<h2>Answer Form</h2>
-		<form class="form-horizontal" th:object="${answerForm}" th:action="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"
-			method="post">
-			<input type="hidden" th:field="*{id}" />
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Value:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" th:field="*{value}" required="required" autofocus="autofocus" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value Error</p>
+		<div class="container">
+			<h2>Answer Form</h2>
+			<form class="form-horizontal" th:object="${answerForm}" th:action="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}"
+				method="post">
+				<input type="hidden" th:field="*{id}" />
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Value:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" th:field="*{value}" required="required" autofocus="autofocus" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value Error</p>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Valid:</label>
-				<div class="col-sm-10">
-					<input type="checkbox" class="form-control" th:field="*{valid}" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('valid')}" th:errors="*{valid}">Valid Error</p>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Valid:</label>
+					<div class="col-sm-10">
+						<input type="checkbox" class="form-control" th:field="*{valid}" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('valid')}" th:errors="*{valid}">Valid Error</p>
+					</div>
 				</div>
-			</div>
-			<div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-		</form>
-
+				<div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
+			</form>
+		</div>
 		<div class="container" th:unless="${#lists.isEmpty(answers)}">
 			<h2>Answers</h2>
 			<table class="table table-striped table-condensed">
