--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -9,29 +9,29 @@
 		<h4>
 			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
 		</h4>
-
-		<h2>Question Form</h2>
-		<form class="form-horizontal" th:object="${questionForm}" th:action="@{/quest/{id}/questions(id=${quest.id})}" method="post">
-			<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{answers}" />
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Value:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" value="Value" th:field="*{value}" required="required" autofocus="autofocus" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value Error</p>
+		<div class="container" >
+			<h2>Question Form</h2>
+			<form class="form-horizontal" th:object="${questionForm}" th:action="@{/quest/{id}/questions(id=${quest.id})}" method="post">
+				<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{answers}" />
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Value:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" value="Value" th:field="*{value}" required="required" autofocus="autofocus" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value Error</p>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Valid answers count:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" value="1" th:field="*{validAnswersCount}" required="required" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('validAnswersCount')}" th:errors="*{validAnswersCount}">Valid answers count Error</p>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Valid answers count:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" value="1" th:field="*{validAnswersCount}" required="required" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('validAnswersCount')}" th:errors="*{validAnswersCount}">Valid answers count Error</p>
+					</div>
 				</div>
-			</div>
-			<div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-		</form>
-
+				<div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
+			</form>
+		</div>
 		<div class="container" th:unless="${#lists.isEmpty(questions)}">
 			<h2>Questions</h2>
 			<table class="table table-striped table-condensed">
