--- a/src/main/resources/templates/quests.html
+++ b/src/main/resources/templates/quests.html
@@ -34,40 +34,42 @@
 				</tbody>
 			</table>
 		</div>
-		<h2>Quest Form</h2>
-		<form class="form-horizontal" th:object="${questForm}" th:action="@{/quest/add}" method="post">
-			<input type="hidden" th:field="*{id}" /><input type="hidden" th:field="*{questions}" />
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Name:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" th:field="*{name}" required="required" autofocus="autofocus" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
+		<div class="container" >
+			<h2>Quest Form</h2>
+			<form class="form-horizontal" th:object="${questForm}" th:action="@{/quest/add}" method="post">
+				<input type="hidden" th:field="*{id}" /><input type="hidden" th:field="*{questions}" />
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Name:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" th:field="*{name}" required="required" autofocus="autofocus" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Description:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" th:field="*{description}" />
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Description:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" th:field="*{description}" />
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Price:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" th:field="*{price}" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Price:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" th:field="*{price}" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
+					</div>
 				</div>
-			</div>
-			<div class="form-group">
-				<label class="col-sm-2 control-label">Prize:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" th:field="*{prize}" />
-					<p class="label label-danger" th:if="${#fields.hasErrors('prize')}" th:errors="*{prize}">Prize Error</p>
+				<div class="form-group">
+					<label class="col-sm-2 control-label">Prize:</label>
+					<div class="col-sm-10">
+						<input type="text" class="form-control" th:field="*{prize}" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('prize')}" th:errors="*{prize}">Prize Error</p>
+					</div>
 				</div>
-			</div>
-			<div>
-				<button type="submit" class="btn btn-primary">Submit</button>
-			</div>
-		</form>
+				<div>
+					<button type="submit" class="btn btn-primary">Submit</button>
+				</div>
+			</form>
+		</div>
 	</div>
 	<footer class="footer">
 		<div class="container">
