--- a/src/main/resources/templates/quiz/results.html
+++ b/src/main/resources/templates/quiz/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
-<title>Quizes</title>
+<title>Results</title>
 <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
@@ -9,23 +9,21 @@
 		<h4>
 			<a th:text="Home" th:href="@{/home}" href="/"></a>
 		</h4>
-		<div class="container" th:unless="${#lists.isEmpty(quests)}">
-			<h2>Quizes</h2>
+		<div class="container" th:unless="${#lists.isEmpty(results)}">
+			<h2>Results</h2>
 			<table class="table table-striped table-condensed">
 				<thead>
 					<tr>
-						<th>Name</th>
-						<th>Description</th>
-						<th>Price</th>
-						<th>Prize</th>
+						<th>UserId</th>
+						<th>QuestId</th>
+						<th>QuestionId</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="quest : ${quests}">
-						<td><a th:text="${quest.name}" th:href="@{'/quiz/' + ${quest.id} + '/question/1'}"></a></td>
-						<td th:text="${quest.description}">Description</td>
-						<td th:text="${quest.price}">Price</td>
-						<td th:text="${quest.prize}">Prize</td>
+					<tr th:each="result : ${results}">
+						<td th:text="${result.userId}">UserId</td>
+						<td th:text="${result.questId}">QuestId</td>
+						<td th:text="${result.questionId}">QuestionId</td>
 					</tr>
 				</tbody>
 			</table>
