--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -17,8 +17,11 @@
 					th:field="*{questionId}" />
 
 				<div class="container form-group" th:each="answer, answerStat : *{answers}">
-					<input type="hidden" th:field="*{answers[__${answerStat.index}__].id}" /> <input type="hidden" th:field="*{answers[__${answerStat.index}__].value}" /> <input
-						type="checkbox" th:field="*{answers[__${answerStat.index}__].state}"></input> <label th:text="${answer.value}"> </label>
+					<input type="hidden" th:field="*{answers[__${answerStat.index}__].id}" /> <input type="hidden" th:field="*{answers[__${answerStat.index}__].value}" />
+					<div class="checkbox">
+						<input th:id="${answerStat.index}" type="checkbox" th:field="*{answers[__${answerStat.index}__].state}" /> <label th:for="${answerStat.index}"
+							th:text="${answer.value}"></label>
+					</div>
 				</div>
 				<button type="submit" class="btn btn-default">Next</button>
 			</form>
