--- a/src/main/resources/templates/quiz/results.html
+++ b/src/main/resources/templates/quiz/results.html
@@ -9,24 +9,8 @@
 		<h4>
 			<a th:text="Home" th:href="@{/home}" href="/"></a>
 		</h4>
-		<div class="container" th:unless="${#lists.isEmpty(results)}">
-			<h2>Results</h2>
-			<table class="table table-striped table-condensed">
-				<thead>
-					<tr>
-						<th>UserId</th>
-						<th>QuestId</th>
-						<th>QuestionId</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="result : ${results}">
-						<td th:text="${result.userId}">UserId</td>
-						<td th:text="${result.questId}">QuestId</td>
-						<td th:text="${result.questionId}">QuestionId</td>
-					</tr>
-				</tbody>
-			</table>
+		<div class="container">
+			<h2 th:text="${message}"></h2>
 		</div>
 	</div>
 	<footer class="footer">
