--- a/src/main/resources/templates/quests.html
+++ b/src/main/resources/templates/quests.html
@@ -16,53 +16,41 @@
 					<tr>
 						<th>Name</th>
 						<th>Description</th>
-						<th>Price</th>
-						<th>Prize</th>
 						<th></th>
 						<th></th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="quest : ${quests}">
-						<td><a th:text="${quest.name}" th:href="@{'/quest/' + ${quest.id + '/edit'}}"></a></td>
+						<td><a th:text="${quest.name}"
+							th:href="@{'/quest/' + ${quest.id + '/edit'}}"></a></td>
 						<td th:text="${quest.description}">Description</td>
-						<td th:text="${quest.price}">Price</td>
-						<td th:text="${quest.prize}">Prize</td>
 						<td><a th:href="@{'/quest/' + ${quest.id + '/questions'}}">Questions</a></td>
-						<td><a th:href="@{'/quest/' + ${quest.id + '/delete/'}}" onclick="return confirm('Are you sure you want to delete\nquest?');">Delete</a></td>
+						<td><a th:href="@{'/quest/' + ${quest.id + '/delete/'}}"
+							onclick="return confirm('Are you sure you want to delete\nquest?');">Delete</a></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
-		<div class="container" >
+		<div class="container">
 			<h2>Quest Form</h2>
-			<form class="form-horizontal" th:object="${questForm}" th:action="@{/quest/add}" method="post">
-				<input type="hidden" th:field="*{id}" /><input type="hidden" th:field="*{questions}" />
+			<form class="form-horizontal" th:object="${questForm}"
+				th:action="@{/quest/add}" method="post">
+				<input type="hidden" th:field="*{id}" /><input type="hidden"
+					th:field="*{questions}" />
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Name:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" th:field="*{name}" required="required" autofocus="autofocus" />
-						<p class="label label-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</p>
+						<input type="text" class="form-control" th:field="*{name}"
+							required="required" autofocus="autofocus" />
+						<p class="label label-danger" th:if="${#fields.hasErrors('name')}"
+							th:errors="*{name}">Name Error</p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Description:</label>
 					<div class="col-sm-10">
 						<input type="text" class="form-control" th:field="*{description}" />
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-2 control-label">Price:</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" th:field="*{price}" />
-						<p class="label label-danger" th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="col-sm-2 control-label">Prize:</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" th:field="*{prize}" />
-						<p class="label label-danger" th:if="${#fields.hasErrors('prize')}" th:errors="*{prize}">Prize Error</p>
 					</div>
 				</div>
 				<div>
