--- a/src/main/resources/templates/quiz/quests.html
+++ b/src/main/resources/templates/quiz/quests.html
@@ -16,16 +16,13 @@
 					<tr>
 						<th>Name</th>
 						<th>Description</th>
-						<th>Price</th>
-						<th>Prize</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="quest : ${quests}">
-						<td><a th:text="${quest.name}" th:href="@{'/quiz/' + ${quest.id} + '/question/1'}"></a></td>
+						<td><a th:text="${quest.name}"
+							th:href="@{'/quiz/' + ${quest.id} + '/question/1'}"></a></td>
 						<td th:text="${quest.description}">Description</td>
-						<td th:text="${quest.price}">Price</td>
-						<td th:text="${quest.prize}">Prize</td>
 					</tr>
 				</tbody>
 			</table>
