More detailed result.

--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -10,18 +10,30 @@
 			<a th:text="Home" th:href="@{/home}" href="/"></a>
 		</h4>
 		<div class="container">
-			<h2 th:text="'Question ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
+			<h2
+				th:text="'Question ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
 			<h2 th:text="${question}"></h2>
-			<form class="form-horizontal" th:object="${answerForm}" th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}" method="post">
-				<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{userId}" /><input type="hidden" th:field="*{questId}" /> <input type="hidden"
-					th:field="*{questionId}" />
+			<form class="form-horizontal" th:object="${answerForm}"
+				th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}"
+				method="post">
+				<input type="hidden" th:field="*{id}" /> <input type="hidden"
+					th:field="*{userId}" /><input type="hidden" th:field="*{questId}" />
+				<input type="hidden" th:field="*{questionId}" />
 
-				<div class="container form-group" th:each="answer, answerStat : *{answers}">
-					<input type="hidden" th:field="*{answers[__${answerStat.index}__].id}" /> <input type="hidden" th:field="*{answers[__${answerStat.index}__].value}" />
+				<div class="container form-group"
+					th:each="answer, answerStat : *{answers}">
+					<input type="hidden"
+						th:field="*{answers[__${answerStat.index}__].id}" /> <input
+						type="hidden" th:field="*{answers[__${answerStat.index}__].value}" />
 					<div class="checkbox">
-						<input th:id="${answerStat.index}" type="checkbox" th:field="*{answers[__${answerStat.index}__].state}" /> <label th:for="${answerStat.index}"
-							th:text="${answer.value}"></label>
+						<input th:id="${answerStat.index}" type="checkbox"
+							th:field="*{answers[__${answerStat.index}__].state}" /> <label
+							th:for="${answerStat.index}" th:text="${answer.value}"></label>
 					</div>
+				</div>
+				<div>
+					<span class="text-danger" th:if="${isSomeAnswerChoosed}">Please,
+						choose at least 1 answer!</span>
 				</div>
 				<button type="submit" class="btn btn-default">Next</button>
 			</form>
