--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,13 +3,14 @@
  * --------------------------------------------------
  */
 body {
-  padding-top: 50px;
-  background-color: #f5f5f5;
+	padding-top: 50px;
+	background-color: #f5f5f5;
 }
+
 footer {
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: #fff;
+	padding-left: 15px;
+	padding-right: 15px;
+	background-color: #fff;
 }
 
 /*
@@ -17,104 +18,120 @@ footer {
  * --------------------------------------------------
  */
 @media screen and (max-width: 768px) {
-  .row-offcanvas {
-    position: relative;
-    -webkit-transition: all 0.25s ease-out;
-    -moz-transition: all 0.25s ease-out;
-    transition: all 0.25s ease-out;
-  }
-
-  .row-offcanvas-left
+	.row-offcanvas {
+		position: relative;
+		-webkit-transition: all 0.25s ease-out;
+		-moz-transition: all 0.25s ease-out;
+		transition: all 0.25s ease-out;
+	}
+	.row-offcanvas-left
   .sidebar-offcanvas {
-    left: -33%;
-  }
-
-  .row-offcanvas-left.active {
-    left: 33%;
-  }
-
-  .sidebar-offcanvas {
-    position: absolute;
-    top: 0;
-    width: 33%;
-    margin-left: 10px;
-  }
+		left: -33%;
+	}
+	.row-offcanvas-left.active {
+		left: 33%;
+	}
+	.sidebar-offcanvas {
+		position: absolute;
+		top: 0;
+		width: 33%;
+		margin-left: 10px;
+	}
 }
-
 
 /* Sidebar navigation */
 .nav-sidebar {
-  background-color: #f5f5f5;
-  margin-right: -15px;
-  margin-bottom: 20px;
-  margin-left: -15px;
+	background-color: #f5f5f5;
+	margin-right: -15px;
+	margin-bottom: 20px;
+	margin-left: -15px;
 }
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
+
+.nav-sidebar>li>a {
+	padding-right: 20px;
+	padding-left: 20px;
 }
-.nav-sidebar > .active > a {
-  color: #fff;
-  background-color: #428bca;
+
+.nav-sidebar>.active>a {
+	color: #fff;
+	background-color: #428bca;
 }
 
 /*
  * Main content
  */
-
 .main {
-  padding: 20px;
-  background-color: #fff;
+	padding: 20px;
+	background-color: #fff;
 }
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
+
+@media ( min-width : 768px) {
+	.main {
+		padding-right: 40px;
+		padding-left: 40px;
+	}
 }
+
 .main .page-header {
-  margin-top: 0;
+	margin-top: 0;
 }
 
 .form-signin {
-  max-width: 450px;
-  padding: 15px;
-  margin: 0 auto;
+	max-width: 450px;
+	padding: 15px;
+	margin: 0 auto;
 }
-.form-signin .form-signin-heading,
+
+.form-signin .form-signin-heading, .form-signin .checkbox {
+	margin-bottom: 10px;
+}
+
 .form-signin .checkbox {
-  margin-bottom: 10px;
+	font-weight: normal;
 }
-.form-signin .checkbox {
-  font-weight: normal;
-}
+
 .form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
+	position: relative;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	font-size: 16px;
 }
+
 .form-signin .form-control:focus {
-  z-index: 2;
+	z-index: 2;
 }
+
 .form-signin input.top {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
 }
+
 .form-signin input.middle {
-    margin-bottom: -1px;
-    border-radius: 0;
+	margin-bottom: -1px;
+	border-radius: 0;
 }
+
 .form-signin input.bottom {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
 
 .form-signin .btn-primary {
-    margin-top: 10px;
-    margin-bottom: 10px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+#horizontal ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	display: inline;
+}
+
+#horizontal li {
+	display: inline;
 }
