Some edits in design and refactoring.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	layout:decorator="layout">
 <head lang="en">
 <title>JTutor</title>
 </head>
@@ -7,12 +9,14 @@
 	<div layout:fragment="content">
 		<h1>Welcome to JTutor</h1>
 		<h3>
-			<a th:href="@{/quest/add}">Create/Update Quests</a>
+			<a th:if="${isAdmin}" th:href="@{/quest/add}">Create/Update
+				Quests</a>
 		</h3>
 		<h3>
 			<a th:href="@{/quiz/quests}">Quests</a>
 		</h3>
-		<div id="created" th:text="${#dates.format(date)}">October 25, 2016</div>
+		<div id="created" th:text="${#dates.format(date)}">October 25,
+			2016</div>
 	</div>
 </body>
 </html>
