--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
 <title>JTutor</title>
 <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
@@ -8,25 +9,34 @@
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">JTutor</a>
+				<a class="navbar-brand" th:href="@{/}" href="/">JTutor</a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
 					<li><a th:href="@{/}" href="/">Home</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span><span class="caret"></span></a>
+					<li class="dropdown"><a class="dropdown-toggle"
+						data-toggle="dropdown" href="#"><span
+							class="glyphicon glyphicon-user"></span><span class="caret"></span></a>
 						<ul class="dropdown-menu">
-							<li><a th:href="@{/user/list}" href="user/list">User List</a></li>
-							<li><a th:href="@{/user/edit/0}" href="user/list">Edit user</a></li>
-							<li><a th:href="@{/user/reset-password}" href="reset">Reset Password</a></li>
+							<li><a th:href="@{/user/list}" href="user/list">User
+									List</a></li>
+							<li><a th:href="@{/user/edit/0}" href="user/list">Edit
+									user</a></li>
+							<li><a th:href="@{/user/reset-password}" href="reset">Reset
+									Password</a></li>
 							<li><a th:href="@{/user/register}" href="register">Register</a></li>
 						</ul></li>
-					<li><a th:href="@{/login}" href="login"><span class="glyphicon glyphicon-log-in"></span></a></li>
-					<li><a th:href="@{/logout}" href="logout"><i class="icon-chevron-left"></i><span class="glyphicon glyphicon-log-out"></span></a></li>
+					<li><a th:href="@{/logout}" href="logout"><i
+							class="icon-chevron-left"></i><span
+							class="glyphicon glyphicon-log-out"></span></a></li>
 				</ul>
 			</div>
 		</div>
@@ -42,7 +52,8 @@
 
 				<!--toggle sidebar button-->
 				<p class="visible-xs">
-					<button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">
+					<button type="button" class="btn btn-primary btn-xs"
+						data-toggle="offcanvas">
 						<i class="glyphicon glyphicon-chevron-left"></i>
 					</button>
 				</p>
