--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	layout:decorator="layout">
 <head lang="en">
 <title>Questions</title>
-<!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
 <body>
-	<div class="container">
+	<div layout:fragment="content" class="container">
 		<h4>
-			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
+			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a
+				th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
 		</h4>
-		<div class="container" >
+		<div class="container">
 			<h2>Question Form</h2>
-			<form class="form-horizontal" th:object="${questionForm}" th:action="@{/quest/{id}/questions(id=${quest.id})}" method="post">
-				<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{answers}" />
+			<form class="form-horizontal" th:object="${questionForm}"
+				th:action="@{/quest/{id}/questions(id=${quest.id})}" method="post">
+				<input type="hidden" th:field="*{id}" /> <input type="hidden"
+					th:field="*{answers}" />
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Value:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" value="Value" th:field="*{value}" required="required" autofocus="autofocus" />
-						<p class="label label-danger" th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value Error</p>
+						<input type="text" class="form-control" value="Value"
+							th:field="*{value}" required="required" autofocus="autofocus" />
+						<p class="label label-danger"
+							th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value
+							Error</p>
 					</div>
 				</div>
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Valid answers count:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" value="1" th:field="*{validAnswersCount}" required="required" />
-						<p class="label label-danger" th:if="${#fields.hasErrors('validAnswersCount')}" th:errors="*{validAnswersCount}">Valid answers count Error</p>
+						<input type="text" class="form-control" value="1"
+							th:field="*{validAnswersCount}" required="required" />
+						<p class="label label-danger"
+							th:if="${#fields.hasErrors('validAnswersCount')}"
+							th:errors="*{validAnswersCount}">Valid answers count Error</p>
 					</div>
 				</div>
 				<div>
@@ -45,20 +55,18 @@
 				</thead>
 				<tbody>
 					<tr th:each="question : *{questions}">
-						<td><a th:text="${question.value}" th:href="@{/quest/{id}/question/{questionId}/edit(id=${quest.id}, questionId=${question.id})}"></a></td>
+						<td><a th:text="${question.value}"
+							th:href="@{/quest/{id}/question/{questionId}/edit(id=${quest.id}, questionId=${question.id})}"></a></td>
 						<td th:text="${question.getAnswers().size()}"></td>
-						<td><a th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}">Answers</a></td>
-						<td><a th:href="@{/quest/{id}/question/{questionId}/delete(id=${quest.id}, questionId=${question.id})}"
+						<td><a
+							th:href="@{/quest/{id}/question/{questionId}/answers(id=${quest.id}, questionId=${question.id})}">Answers</a></td>
+						<td><a
+							th:href="@{/quest/{id}/question/{questionId}/delete(id=${quest.id}, questionId=${question.id})}"
 							onclick="return confirm('Are you sure you want to delete\nquestion?');">Delete</a></td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 	</div>
-	<footer class="footer">
-		<div class="container">
-			<!--/*/ <th:block th:include="fragments/footer :: footer">&copy; 2016 The Static Templates</th:block> /*/-->
-		</div>
-	</footer>
 </body>
 </html>
