--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <title>JTutor</title>
 </head>
 <body>
-	<div layout:fragment="content">
+	<div id="styled" layout:fragment="content">
 		<h1>Welcome to JTutor</h1>
 		<h3>
 			<a th:if="${isAdmin}" th:href="@{/quest/add}">Create/Update
@@ -14,6 +14,13 @@
 		</h3>
 		<h3>
 			<a th:href="@{/quiz/quests}">Quests</a>
+		</h3>
+		<h3>
+			<a th:if="${isAdmin}" th:href="@{/lecture/add}">Create/Update
+				Lectures</a>
+		</h3>
+		<h3>
+			<a th:href="@{/lecture/lectures}">Lectures</a>
 		</h3>
 		<div id="created" th:text="${#dates.format(date)}">October 25,
 			2016</div>
