--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -135,3 +135,25 @@ footer {
 #horizontal li {
 	display: inline;
 }
+
+#styled textarea {
+	width: 946px;
+	height: 150px;
+	border: 3px solid #cccccc;
+	padding: 5px;
+	font-family: Tahoma, sans-serif;
+	resize: none;
+	overflow-x: hidden;
+}
+
+#styled h1, h2, h3, a, p, input, label, button, div {
+	font-family: Tahoma, sans-serif;
+}
+
+#styled pre {
+	font-family: Tahoma, sans-serif;
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	word-break: normal;
+	white-space: normal;
+}
