--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -6,7 +6,7 @@
 <title>Questions</title>
 </head>
 <body>
-	<div layout:fragment="content" class="container">
+	<div id="styled" layout:fragment="content" class="container">
 		<h4>
 			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a
 				th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
@@ -20,8 +20,8 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Value:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" value="Value"
-							th:field="*{value}" required="required" autofocus="autofocus" />
+						<textarea class="form-control" th:field="*{value}"
+							required="required" autofocus="autofocus"></textarea>
 						<p class="label label-danger"
 							th:if="${#fields.hasErrors('value')}" th:errors="*{value}">Value
 							Error</p>
