--- a/src/main/resources/templates/admin/quests.html
+++ b/src/main/resources/templates/admin/quests.html
@@ -6,7 +6,7 @@
 <title>Quests Form</title>
 </head>
 <body>
-	<div layout:fragment="content" class="container">
+	<div id="styled" layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
 			<h2>Quests</h2>
 			<table class="table table-striped table-condensed">
@@ -48,7 +48,11 @@
 				<div class="form-group">
 					<label class="col-sm-2 control-label">Description:</label>
 					<div class="col-sm-10">
-						<input type="text" class="form-control" th:field="*{description}" />
+						<input type="text" class="form-control" th:field="*{description}"
+							required="required" />
+						<p class="label label-danger"
+							th:if="${#fields.hasErrors('description')}"
+							th:errors="*{description}">Description Error</p>
 					</div>
 				</div>
 				<div>
