--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
 <head>
 <title>Application Error</title>
 </head>
 <body>
-	<div class="alert alert-danger">
+	<div id="styled" class="alert alert-danger">
 		<h1>Application Error</h1>
 		<h2 th:text="${title}">Title</h2>
-		<div id="created" th:text="${timestamp}">July 11, 2012 2:17:16 PM CDT</div>
+		<div id="created" th:text="${timestamp}">July 11, 2012 2:17:16
+			PM CDT</div>
 		<div>
-			There was an unexpected error (type=<span th:text="${error}">Bad</span>, status=<span th:text="${status}">500</span>).
+			There was an unexpected error (type=<span th:text="${error}">Bad</span>,
+			status=<span th:text="${status}">500</span>).
 		</div>
 		<div th:text="${message}">No Message</div>
 		<div th:text="${exception}">No exception</div>
@@ -18,7 +21,9 @@
 		<div th:if="${user}" th:text="${user.lastLogin}"></div>
 		<div th:if="${url}" th:text="${url}">No url available</div>
 		<div>
-			Please contact <a th:if="${support}" th:href="@{mailto:{mail}(mail=${support},subject=${exception},body=${message})}">support</a> with the above information.
+			Please contact <a th:if="${support}"
+				th:href="@{mailto:{mail}(mail=${support},subject=${exception},body=${message})}">support</a>
+			with the above information.
 		</div>
 	</div>
 </body>
