--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-	<div th:fragment="footer">&copy; 2016 Igor Goodwill</div>
+	<div id="styled" th:fragment="footer">&copy; 2016 Igor Goodwill</div>
 </body>
 </html>
