--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container-fluid">
+		<div id="styled" class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle" data-toggle="collapse"
 					data-target=".navbar-collapse">
@@ -70,12 +70,11 @@
 
 	<footer>
 
-		<div class="footer">
+		<div id="styled" class="footer">
 			<p class="pull-right" th:if="${g_user}">
 				Logged in as: <span th:text="${g_user.email}">my email</span>
 			</p>
 			&copy; 2016 Igor Goodwill
-
 		</div>
 	</footer>
 </body>
