--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -6,7 +6,7 @@
 <title th:text="${quest.name}"></title>
 </head>
 <body>
-	<div layout:fragment="content" class="container">
+	<div id="styled" layout:fragment="content" class="container">
 		<div class="container">
 			<div id="horizontal">
 				<ul th:each="number : ${numbersBefore}">
@@ -21,36 +21,39 @@
 						href="/"></a></li>
 				</ul>
 			</div>
-			<h2
-				th:text="'Question ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
-			<h2 th:text="${question}"></h2>
-			<form class="form-horizontal" th:object="${answerForm}"
-				th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}"
-				method="post">
-				<input type="hidden" th:field="*{id}" /> <input type="hidden"
-					th:field="*{userId}" /><input type="hidden" th:field="*{questId}" />
-				<input type="hidden" th:field="*{questionId}" />
+			<div id="styled">
+				<h2
+					th:text="'Question ' + ${questionNumber} + '/' + ${questionsCount} + ':'"></h2>
+				<pre th:text="${question}"></pre>
+				<form class="form-horizontal" th:object="${answerForm}"
+					th:action="@{'/quiz/' + ${quest.id} + '/question/' + ${questionNumber}}"
+					method="post">
+					<input type="hidden" th:field="*{id}" /> <input type="hidden"
+						th:field="*{userId}" /><input type="hidden" th:field="*{questId}" />
+					<input type="hidden" th:field="*{questionId}" />
 
-				<div class="container form-group"
-					th:each="answer, answerStat : *{answers}">
-					<input type="hidden"
-						th:field="*{answers[__${answerStat.index}__].id}" /> <input
-						type="hidden" th:field="*{answers[__${answerStat.index}__].value}" />
-					<div class="checkbox">
-						<input th:id="${answerStat.index}" type="checkbox"
-							th:field="*{answers[__${answerStat.index}__].state}" /> <label
-							th:for="${answerStat.index}" th:text="${answer.value}"></label>
+					<div class="container form-group"
+						th:each="answer, answerStat : *{answers}">
+						<input type="hidden"
+							th:field="*{answers[__${answerStat.index}__].id}" /> <input
+							type="hidden"
+							th:field="*{answers[__${answerStat.index}__].value}" />
+						<div class="checkbox">
+							<input th:id="${answerStat.index}" type="checkbox"
+								th:field="*{answers[__${answerStat.index}__].state}" /> <label
+								th:for="${answerStat.index}" th:text="${answer.value}"></label>
+						</div>
 					</div>
-				</div>
-				<div>
-					<span class="text-danger" th:if="${isSomeAnswerChoosed}">Please,
-						choose at least 1 answer!</span>
-				</div>
-				<button th:unless="${questionNumber} == ${questionsCount}"
-					type="submit" class="btn btn-default">Next</button>
-				<button th:if="${questionNumber} == ${questionsCount}" type="submit"
-					class="btn btn-default">Finish</button>
-			</form>
+					<div>
+						<span class="text-danger" th:if="${isSomeAnswerChoosed}">Please,
+							choose at least 1 answer!</span>
+					</div>
+					<button th:unless="${questionNumber} == ${questionsCount}"
+						type="submit" class="btn btn-default">Next</button>
+					<button th:if="${questionNumber} == ${questionsCount}"
+						type="submit" class="btn btn-default">Finish</button>
+				</form>
+			</div>
 		</div>
 	</div>
 </body>
