--- a/src/main/resources/templates/user/activation-send.html
+++ b/src/main/resources/templates/user/activation-send.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	layout:decorator="layout">
 <head>
 <title>Re-send Activation</title>
 </head>
 <body>
-	<div layout:fragment="content">
-		<form class="form-signin" th:action="@{/user/activation-send}" th:object="${users}" action="/user/activation-send" method="post">
+	<div id="styled" layout:fragment="content">
+		<form class="form-signin" th:action="@{/user/activation-send}"
+			th:object="${users}" action="/user/activation-send" method="post">
 			<h2 class="form-signin-heading">Re-send Activation</h2>
 
-			<div class="alert alert-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
+			<div class="alert alert-danger" th:if="${#fields.hasErrors('email')}"
+				th:errors="*{email}">Email error</div>
 
-			<input type="email" id="inputEmail" name="email" class="form-control" placeholder="Email" required="required" autofocus="autofocus" />
+			<input type="email" id="inputEmail" name="email" class="form-control"
+				placeholder="Email" required="required" autofocus="autofocus" />
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Send Activation</button>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Send
+				Activation</button>
 		</form>
 	</div>
 </body>
