--- a/src/main/resources/templates/user/register-success.html
+++ b/src/main/resources/templates/user/register-success.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	layout:decorator="layout">
 <head>
 <title>REGISTER SUCCESS</title>
 </head>
 <body>
-	<div layout:fragment="content">
-		<div class="alert alert-info">Registration was successful, please activate your account by checking your inbox &amp; spam.</div>
+	<div id="styled" layout:fragment="content">
+		<div class="alert alert-info">Registration was successful,
+			please activate your account by checking your inbox &amp; spam.</div>
 	</div>
 </body>
 </html>
