Some edits. (Nothing global!)

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -152,8 +152,6 @@ footer {
 
 #styled pre {
 	font-family: Tahoma, sans-serif;
-	overflow-wrap: break-word;
-	word-wrap: break-word;
-	word-break: normal;
-	white-space: normal;
+	white-space: pre-wrap;
+	word-break: keep-all;
 }
