--- a/src/main/resources/templates/admin/answers.html
+++ b/src/main/resources/templates/admin/answers.html
@@ -6,7 +6,7 @@
 <title>Answers</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<h4>
 			<a th:text="Home" href="home" th:href="@{/home}"></a> -> <a
 				th:text="Quests" href="quest/add" th:href="@{/quest/add}"></a> -> <a
