--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -6,7 +6,7 @@
 <title>Questions</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<h4>
 			<a th:text="Home" th:href="@{/home}" href="/"></a> -> <a
 				th:text="${quest.name}" th:href="@{/quest/add}" href="quest/add"></a>
