--- a/src/main/resources/templates/admin/quests.html
+++ b/src/main/resources/templates/admin/quests.html
@@ -6,7 +6,7 @@
 <title>Quests Form</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
 			<h2>Quests</h2>
 			<table class="table table-striped table-condensed">
