--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
 <title>JTutor</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<h1>Welcome to JTutor</h1>
 		<h3>
 			<a th:if="${isAdmin}" th:href="@{/quest/add}">Create/Update
