--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -58,7 +58,7 @@
 					</button>
 				</p>
 
-				<div layout:fragment="content" class="content-fragment">
+				<div id="styled" layout:fragment="content" class="content-fragment">
 					<!-- CONTENT GOES HERE -->
 				</div>
 
