--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,7 +6,7 @@
 <title>USER LIST</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<h1>USER LIST</h1>
 
 		<div class="table-responsive">
