--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,7 +6,7 @@
 <title>LOGIN</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 
 		<form class="form-signin" th:action="@{/login}" th:object="${users}"
 			action="/login" method="post">
