--- a/src/main/resources/templates/user/permission-denied.html
+++ b/src/main/resources/templates/user/permission-denied.html
@@ -6,7 +6,7 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-	<div id="styled" class="alert alert-warning">
+	<div class="alert alert-warning">
 		<h1>Permission Error</h1>
 		<h2>You do not have access to this section of the website</h2>
 	</div>
