--- a/src/main/resources/templates/user/register-success.html
+++ b/src/main/resources/templates/user/register-success.html
@@ -6,7 +6,7 @@
 <title>REGISTER SUCCESS</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<div class="alert alert-info">Registration was successful,
 			please activate your account by checking your inbox &amp; spam.</div>
 	</div>
