--- a/src/main/resources/templates/user/reset-password-sent.html
+++ b/src/main/resources/templates/user/reset-password-sent.html
@@ -6,7 +6,7 @@
 <title>Password Reset</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<div class="alert alert-info">
 			<p>Password reset link was just sent to your inbox.</p>
 			<p>Please check your email for instructions on how to reset your
