--- a/src/main/resources/templates/user/reset-password.html
+++ b/src/main/resources/templates/user/reset-password.html
@@ -6,7 +6,7 @@
 <title>Password Reset</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/reset-password}"
 			th:object="${users}" action="/user/reset-password" method="post">
 			<h2 class="form-signin-heading">Password Reset</h2>
