--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,7 +5,7 @@
 <title>Application Error</title>
 </head>
 <body>
-	<div id="styled" class="alert alert-danger">
+	<div class="alert alert-danger">
 		<h1>Application Error</h1>
 		<h2 th:text="${title}">Title</h2>
 		<div id="created" th:text="${timestamp}">July 11, 2012 2:17:16
