--- a/src/main/resources/templates/lecture/lectures.html
+++ b/src/main/resources/templates/lecture/lectures.html
@@ -6,7 +6,7 @@
 <title>Lectures</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(lectures)}">
 			<h2>Lectures</h2>
 			<table class="table table-striped table-condensed">
