--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -6,7 +6,7 @@
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<pre th:text="${lecture.value}"></pre>
 	</div>
 </body>
