--- a/src/main/resources/templates/quiz/error.html
+++ b/src/main/resources/templates/quiz/error.html
@@ -6,7 +6,7 @@
 <title>Error</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="alert alert-danger">Sorry,
+	<div layout:fragment="content" class="alert alert-danger">Sorry,
 		you've not answered all questions.</div>
 </body>
 </html>
