--- a/src/main/resources/templates/quiz/question.html
+++ b/src/main/resources/templates/quiz/question.html
@@ -6,7 +6,7 @@
 <title th:text="${quest.name}"></title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<div class="container">
 			<div id="horizontal">
 				<ul th:each="number : ${numbersBefore}">
