--- a/src/main/resources/templates/quiz/quests.html
+++ b/src/main/resources/templates/quiz/quests.html
@@ -6,7 +6,7 @@
 <title>Quizzes</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<div class="container" th:unless="${#lists.isEmpty(quests)}">
 			<h2>Quizzes</h2>
 			<table class="table table-striped table-condensed">
