--- a/src/main/resources/templates/quiz/results.html
+++ b/src/main/resources/templates/quiz/results.html
@@ -6,7 +6,7 @@
 <title>Results</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content" class="container">
+	<div layout:fragment="content" class="container">
 		<div class="container">
 			<h2 th:text="${message}"></h2>
 			<h2>Correct answers:</h2>
