--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -6,7 +6,7 @@
 <title>Edit User</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/edit}"
 			th:object="${users}" method="post">
 			<h2 class="form-signin-heading">
