--- a/src/main/resources/templates/user/reset-password-change.html
+++ b/src/main/resources/templates/user/reset-password-change.html
@@ -6,7 +6,7 @@
 <title>Password Change</title>
 </head>
 <body>
-	<div id="styled" layout:fragment="content">
+	<div layout:fragment="content">
 		<form class="form-signin" th:action="@{/user/reset-password-change}"
 			th:object="${users}" action="/user/reset-password-change"
 			method="post">
