Lectures with HTML tags are able now

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -141,7 +141,7 @@ footer {
 	border: 3px solid #cccccc;
 	padding: 5px;
 	font-family: Tahoma, sans-serif;
-	resize: none;
+	resize: vertical;
 	overflow-x: hidden;
 }
 
