--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -10,7 +10,7 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 
-		showLecture(/*[[${lecture}]]*/'');
+		showLecture(/*[[${lecture}]]*/'asdasdasd');
 
 		/*]]>*/
 	</script>
