--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -10,7 +10,7 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 
-		document.getElementById("lecture").innerHTML = [[${lecture.value}]];
+		document.getElementById("lecture").innerHTML = "home.html";
 
 		/*]]>*/
 	</script>
