--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -10,7 +10,9 @@
 	<script th:inline="javascript">
 		/*<![CDATA[*/
 
-		document.getElementById("lecture").innerHTML = "home.html";
+		var theDiv = document.getElementById("lecture");
+		var content = document.createTextNode(/*[[${lecture.value}]]*/);
+		theDiv.appendChild(content);
 
 		/*]]>*/
 	</script>
