--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -8,7 +8,7 @@
 <body>
 	<div layout:fragment="content" id="lecture"></div>
 	<script>
-		$("#lecture").append("some text");
+		$('#lecture').html('some text');
 	</script>
 </body>
 </html>
