--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -6,7 +6,7 @@
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
-	<div layout:fragment="content" id="lecture"></div>
+	<div id="lecture"></div>
 	<script>
 		$('#lecture').html('some text');
 	</script>
