changes in templates

--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	layout:decorator="layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorator="layout">
 <head lang="en">
 <title th:text="${lecture.name}"></title>
 </head>
 <body>
 	<div layout:fragment="content"></div>
-	<script>
+	<script type="text/javascript">
 		alert("Hello");
 	</script>
 </body>
