changes in templates

--- a/src/main/resources/templates/lecture/show.html
+++ b/src/main/resources/templates/lecture/show.html
@@ -6,7 +6,7 @@
 <body>
 	<div layout:fragment="content">
 		<div id="layout"></div>
-		<script type="text/javascript" th:include="javascript">
+		<script type="text/javascript" th:inline="javascript">
 			/*<![CDATA[*/
 				
 			$("#layout").html([[${layout.value}]]);
