--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,6 +20,8 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
 					<li><a th:href="@{/}" href="/">Home</a></li>
+					<li><a th:href="@{/quiz/quests}" href="/quiz/quests">Quests</a></li>
+					<li><a th:href="@{/lecture/lectures}" href="/lecture/lectures">Lectures</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown"><a class="dropdown-toggle"
