--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -30,6 +30,8 @@
 						<ul class="dropdown-menu">
 							<li><a th:href="@{/user/list}" href="user/list">User
 									List</a></li>
+							<li><a th:href="@{/quiz/results}" href="quiz/results">Your
+									Results</a></li>
 							<li><a th:href="@{/user/edit/0}" href="user/list">Edit
 									user</a></li>
 							<li><a th:href="@{/user/reset-password}" href="reset">Reset
