--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar">
-					<li><a th:href="@{/}" href="/">Home</a></li>
+					<li><a th:href="@{/}" href="/" th:text="#{label.home}"></a></li>
 					<li><a th:href="@{/quiz/quests}" href="/quiz/quests">Quests</a></li>
 					<li><a th:href="@{/lecture/lectures}" href="/lecture/lectures">Lectures</a></li>
 				</ul>
